# dye-patch

./: .gitignore  README.md  pyproject.toml
data/vector/: plot_centroids.geojson  unsprayed_annex.geojson
patch/: patch_methods.md
patch/debug/: check_loss_fn.py  check_loss_fn.sbatch  pos_patch_centered.py  pos_patch_centered.sbatch  simulate_batch.py  simulate_dataloader.py  test_data_model_loading.py  test_loading.sbatch
patch/debug/bottleneck/: train.py  train.sbatch
patch/debug/cielab_stats/: train.py  train.sbatch
patch/debug/cls_token/: train.py  train.sbatch
patch/debug/crop224/: train.py  train.sbatch
patch/debug/lora/: train.py  train.sbatch
patch/debug/lr_scheduling/: compare.py  compare.sbatch
patch/debug/min_spray_loss/: train.py  train.sbatch
patch/debug/rgb_overlay/: build_table.py  build_table_embeddings.py  hsv_knn_deltas.npz  lab_knn_deltas.npz  plot_examples.py
patch/eval/: data_source.py  temporal_holdout.py
patch/eval/sbatch/: 00_data_source.sbatch  01_temporal_holdout.sbatch
patch/preprocessing/: cache_model_and_data.py  extract_local_tiles.py  extract_offsite_tiles.py  push_to_hf.py
patch/tuning/: sweep_epochs.py  sweep_lr.py  sweep_neg.py  sweep_overlay.py
patch/tuning/sbatch/: 00_sweep_lr.sbatch  00_sweep_neg.sbatch  00b_sweep_neg.sbatch  01_sweep_epochs.sbatch  01_sweep_lr.sbatch  02_sweep_epochs.sbatch  (+2 more)
patch/utils/: augmentations.py  config.py  dataset.py  models.py  synthetic.py  train.py
patch/visualizations/: plot_data_source.py  plot_examples.py  plot_factors.py  plot_temporal.py
(+1 files in other folders)
